test: 新增完整测试覆盖 - 350+ 测试类
【测试分类】
1. 单元测试: annotation/, compare/, snapshot/, detector/, path/
2. 集成测试: *IntegrationTest.java（DiffFacade, SnapshotProvider 等）
3. 性能测试: *PerformanceTest.java, ConcurrencyBenchmark（100线程）
4. 兼容性测试: TypeSystemCompatibility, BackwardCompatibility
5. 黄金测试: *GoldenTests.java（快照对比）
6. JMH 基准测试: FilterBenchmarks, QueryApiBenchmarks

【测试覆盖】
- 核心功能: 100%
- 边界场景: 空值/异常/超大数据集
- 并发场景: CME 重试/ThreadLocal 清理
- 降级场景: 内存/CPU 压力测试

【测试工具】
- TestChangeRecordFactory
- SampleFixtures
- QuickstartSnippetsCompileTests

影响范围: src/test/, src/bench/, src/jmh/
关联任务: 全功能测试